[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libtime"
version = "1.1.4"
description = "Offline timezone lookup + local time formatting + optional weather & calendar conversions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "LibS0n"}]
keywords = ["timezone", "weather", "geolocation", "offline", "discord"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = ["aiohttp>=3.8.0", "tzdata>=2024.0"]
requires-python = ">=3.9"

[project.optional-dependencies]
calendar = ["hijri-converter>=2.3.0", "jdatetime>=4.1.0", "convertdate>=2.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["libtime*"]

[tool.setuptools.package-data]
libtime = ["databases/*.gz"]
